# wheresmobike

./: README.md  crawlTrain.py  parseCraig.py
WebGL/: collada_demo.js  webgl_loader_collada.html
WebGL/three.js-master/examples/: webgl_loader_collada.html
crawler/: craig.csv  crawler.py
train/: features_out.yaml  out.yaml
vision/: .gitignore  CMakeLists.txt  sample_results.xml
vision/bin_src/: CMakeLists.txt  magic.cpp  trainer.cpp  yaml_test.cpp
vision/data/: data.yaml  features.yaml  groundData.yaml  myData.yaml
vision/data/images/: features.yaml  features_groundData.yaml  groundData.yaml  seperateTestTrain.hs  test.yaml  train.yaml
vision/include/wmb/: bike_features.h  logging.h  result.h  round.h  viz.h  wmb.h  wmb_params.h
vision/lib_src/: CMakeLists.txt  bike_features.cpp  bike_persistance.cpp  result.cpp  viz.cpp  wmb.cpp  wmb_ctor.cpp  wmb_fork.cpp  wmb_hist.cpp  wmb_params.cpp  wmb_pre.cpp  wmb_wheels.cpp
web/: Gemfile
web/app/assets/bike/: collada_demo.js  webgl_loader_collada.html
web/app/assets/javascripts/: search.js
web/app/assets/stylesheets/: bootstrap.min.css  style.css
web/app/controllers/: search_controller.rb  welcome_controller.rb
web/app/helpers/: application_helper.rb
web/app/views/layouts/: application.html.erb
web/app/views/search/: search.html.erb  search.js.erb
web/app/views/welcome/: about.html.erb  index.html.erb
web/config/: config.yml  routes.rb
web/config/initializers/: 00_config.rb  searcher.rb  secret_token.rb
web/lib/: searcher.rb
